test/lit/vpto/vmuls_low_precision_verify_invalid.pto
// Copyright (c) 2026 Huawei Technologies Co., Ltd.
// This program is free software, you can redistribute it and/or modify it under the terms and conditions of
// CANN Open Software License Agreement Version 2.0 (the "License").
// Please refer to the License for details. You may not use this file except in compliance with the License.
// THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
// INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
// See LICENSE in the root of the software repository for the full text of the License.

// RUN: not ptoas --pto-arch=a5 --pto-backend=vpto %s 2>&1 | FileCheck %s

// CHECK: error: 'pto.vmuls' op input type must not use low-precision vector element type

module attributes {pto.target_arch = "a5"} {
  func.func @vmuls_hif8_invalid(%src: !pto.ptr<!pto.hif8, ub>, %alpha: !pto.hif8) {
    %c0 = arith.constant 0 : index
    pto.vecscope {
      %mask = pto.pset_b8 "PAT_ALL" : !pto.mask<b8>
      %vec = pto.vlds %src[%c0] : !pto.ptr<!pto.hif8, ub> -> !pto.vreg<256x!pto.hif8>
      %out = pto.vmuls %vec, %alpha, %mask : !pto.vreg<256x!pto.hif8>, !pto.hif8, !pto.mask<b8> -> !pto.vreg<256x!pto.hif8>
      %use = pto.vbitcast %out : !pto.vreg<256x!pto.hif8> -> !pto.vreg<64xf32>
    }
    return
  }
}
